[package]
name = "kmouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
#uinput = { version = "0.1.3" }
#libudev = "*"
#input = "0.7.1"
#nix = "*"
#libc = "*"
#evdev-rs = "0.6.0"
evdev = { version = "0.12.0", features = ["tokio"]}
tokio = { version = "1.17", features = ["macros", "rt",  "time", "sync"] }
